--- a/Lizzie/Base.lproj/LaunchScreen.storyboard
+++ b/Lizzie/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11129.15" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11103.10"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,14 +21,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Heart Control" translatesAutoresizingMaskIntoConstraints="NO" id="qyy-B4-SPj"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="3Pk-DW-gsO">
+                                <rect key="frame" x="87" y="233" width="200" height="200"/>
+                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.76078431372549016" green="0.82352941176470584" blue="0.8784313725490196" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                         <constraints>
-                            <constraint firstItem="qyy-B4-SPj" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="cuP-3L-dhK"/>
-                            <constraint firstItem="qyy-B4-SPj" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="90" id="gDr-bc-Aaw"/>
-                            <constraint firstAttribute="trailing" secondItem="qyy-B4-SPj" secondAttribute="trailing" constant="90" id="hDZ-Tz-rx4"/>
-                            <constraint firstItem="qyy-B4-SPj" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="nI1-e6-4q3"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="3Pk-DW-gsO" secondAttribute="trailing" constant="72" id="Kzc-oy-fZL"/>
+                            <constraint firstItem="3Pk-DW-gsO" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="71" id="bCA-ih-1PO"/>
+                            <constraint firstItem="3Pk-DW-gsO" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="213" id="biC-UO-hsK"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="3Pk-DW-gsO" secondAttribute="bottom" constant="234" id="kMt-Ka-I62"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -35,6 +40,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Heart Control" width="500" height="500"/>
+        <image name="LaunchScreen" width="512" height="512"/>
     </resources>
 </document>
