--- a/Lizzie/Base.lproj/Main.storyboard
+++ b/Lizzie/Base.lproj/Main.storyboard
@@ -429,7 +429,7 @@
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wtN-h9-zdS">
                                                 <rect key="frame" x="245" y="0.0" width="90" height="30"/>
                                                 <state key="normal" title="Select Points">
-                                                    <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
                                                     <action selector="selectPointsClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Jm0-Gq-b62"/>
